--- a/styles/all.css
+++ b/styles/all.css
@@ -6,6 +6,8 @@ body {
     line-height: 1.5;
     background: rgb(50, 50, 50);
     color: rgb(255, 255, 255);
+    padding: 20px 40px;
+    text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -20,17 +22,24 @@ a:hover {
     text-decoration: underline;
 }
 
-main {
-    margin: 20px 40px;
-    text-align: center;
-}
-
 header h1 {
     font-size: 2em;
     margin: 6px 12px;
     text-transform: uppercase;
     color: rgb(160, 160, 160);
     text-shadow: 1px 1px 2px rgb(0, 0, 0);
+}
+
+main input {
+    width: 80%;
+    padding: 8px;
+    margin: 20px 0;
+    font-family: monospace;
+    border: 1px solid rgb(30, 30, 30);
+}
+
+main ul {
+
 }
 
 footer {
