--- a/styles/all.css
+++ b/styles/all.css
@@ -4,7 +4,7 @@ body {
     font-family: "Open Sans", sans-serif;
     font-size: 12pt;
     line-height: 1.5;
-    background: rgb(50, 50, 50);
+    background: rgb(30, 30, 30);
     color: rgb(255, 255, 255);
     padding: 20px 40px;
     text-align: center;
@@ -30,12 +30,15 @@ header h1 {
     text-shadow: 1px 1px 2px rgb(0, 0, 0);
 }
 
+main {
+    font-family: monospace;
+}
+
 main input {
     width: 80%;
     padding: 8px;
     margin: 20px 0;
-    font-family: monospace;
-    border: 1px solid rgb(30, 30, 30);
+    border: 1px solid rgb(10, 10, 10);
 }
 
 main ul {
