Add output of unicode characters

--- a/styles/all.css
+++ b/styles/all.css
@@ -34,19 +34,26 @@ main {
     font-family: monospace;
 }
 
-main input {
+main > * {
     width: 80%;
     padding: 8px;
-    margin: 20px 0;
+    margin: 20px auto;
+}
+
+main input {
     border: 1px solid rgb(10, 10, 10);
 }
 
-main ul {
-
+main ul li {
+    display: inline-block;
+    margin: 6px;
+    background: rgb(15, 15, 15);
+    padding: 8px;
+    width: 90px;
 }
 
 footer {
-    margin: 20px;
+    margin: 40px 20px 20px 20px;
     font-size: 0.9em;
     color: rgb(200, 200, 200);
 }
